ros_workspace/log/build_2020-12-02_04-21-47/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 40
    self.get_logger().info(str(temp)))
                                     ^
SyntaxError: unmatched ')'

